--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     text-align: center;
     font-weight: 400;
+
 }
 
 .header {
@@ -35,6 +36,8 @@ body {
 /*Aumentando el tamaño de la flecha*/
 .fas{
     font-size: 4em;
+    color: #0AC693;
+    margin:30px; 
 }
 
 p{
@@ -44,6 +47,8 @@ p{
 }
 
 .logo {
+    content: url("../images/isotipo.svg");
+    transform: scale(.5);
     width: 90px;
     margin: 1em;
 }
@@ -87,7 +92,7 @@ p{
 .social-links{
     list-style: none;
     padding: 0;
-    margin-top: 3em;
+    margin-top: 2em;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -95,10 +100,10 @@ p{
 }
 
 .social-links li a{
-    color: #00FFFF;
+    color: white;
     text-decoration: none;
     font-size: 2.5em;
-    margin: 3px;
+    margin: 10px;
     font-size: 6em;
 }
 
@@ -165,6 +170,7 @@ p{
 
 .about{
     margin-top: 2em;
+    width: 100%;
 }
 
 .about h2 {
@@ -172,10 +178,13 @@ p{
     font-weight: 700;
     font-size: 1.125em;
     margin: 2em;
+    width: 30%;
 }
 
 .bio-info img{
    width: 200px;
+   flex-direction: initial;
+   
 }
 
 .bio-info p{
@@ -184,6 +193,8 @@ p{
     text-align: left;
     line-height: 25px;
     letter-spacing: 2px;
+    width: 40%;
+    /* */
 }
 
 .contact {
@@ -191,6 +202,7 @@ p{
     flex-direction: column;
     text-align: left;
     padding: 0px 1em;
+    width: 40%;
 }
 
 .contact * + * {
@@ -268,7 +280,9 @@ footer .social-links {
 .menu li a {
     color: white;
     text-decoration: none;
-    
+}
+.menu li a:hover{
+    color: #F74442;
 }
 
 /* Pesonalizando estilo para tablets*/
