--- a/css/main.css
+++ b/css/main.css
@@ -167,10 +167,18 @@ p{
 }
 
 /* About */
-
-.about{
+/* parte donde esta el contacto de nombre etc*/
+.container{
     margin-top: 2em;
-    width: 100%;
+    padding-bottom: 4em;
+}
+.container h2{
+    display: block;
+}
+.bio-info{
+    display: inline-flex;
+    flex-direction: column;
+    width: 45%;
 }
 
 .about h2 {
@@ -178,31 +186,31 @@ p{
     font-weight: 700;
     font-size: 1.125em;
     margin: 2em;
-    width: 30%;
 }
 
 .bio-info img{
    width: 200px;
-   flex-direction: initial;
-   
+   margin: auto;
+
 }
 
 .bio-info p{
     font-size: 16px;
-    padding: 2em;
+    padding: 20px;
     text-align: left;
     line-height: 25px;
     letter-spacing: 2px;
-    width: 40%;
+    width: 100%;
+    box-sizing: border-box;
     /* */
 }
 
 .contact {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
+    display: inline-block;
+    width: 45%;
     padding: 0px 1em;
-    width: 40%;
+    box-sizing: border-box;
+    vertical-align: top;
 }
 
 .contact * + * {
@@ -222,6 +230,12 @@ p{
     width: 100%;
     cursor: pointer;
     margin: 0.5em;
+}
+.contact-form label{
+    font-size: 1.3em;
+    float: left;
+    width: 5em;
+    margin-right: 2em;
 }
 
 /* Decorando placeholder */
@@ -347,5 +361,6 @@ footer .social-links {
         width: 80%;
         margin: 0 auto;
         max-width: 1440px;
+        overflow: hidden;
     }
 }
