--- a/css/main.css
+++ b/css/main.css
@@ -18,17 +18,17 @@ body {
     font-weight: 400;
 
 }
-
+/**Se define la caja del header */
 .header {
     display: flex;
     justify-content: space-between;
 
 }
-
+/*desactiva la visualizacion del elemento*/
 .src-only {
     display: none;
 }
-
+/*Desactiva la visualizacion del elemento y se le agrega un margen*/
 .hide-mobile {
     display: none;
     margin: 5px;
@@ -39,20 +39,20 @@ body {
     color: #0AC693;
     margin:30px; 
 }
-
+/*se define fondo, el margen del parrafo*/
 p{
     font-size: 1em;
     padding: 1rem;
     line-height: 25px;
 }
-
+/*Se define el logo junto con su escala y su margen*/
 .logo {
     content: url("../images/isotipo.svg");
     transform: scale(.5);
     width: 90px;
     margin: 1em;
 }
-
+/*Se define la caja de las opciones, junto con sus posiciones*/
 .options {
     color: inherit;
     text-decoration: none;
@@ -74,14 +74,14 @@ p{
 .big-hero img {
     width: 150px;
 }
-
+/*Se pone los margenes, espacios y el tamaño de la fuente*/
 .big-hero h2 {
     font-size: 1.875em;
     font-weight: 700;
     letter-spacing: 0.002em;
     margin-top: 1em ;
 }
-
+/*Se define el color */
 .big-hero p {
     font-size: 0.9em;;
     color: #D7DEE6;
@@ -98,7 +98,7 @@ p{
     justify-content: center;
 
 }
-
+/*Se define el color, el margen y se quita la decoracion de el texto*/
 .social-links li a{
     color: white;
     text-decoration: none;
@@ -108,16 +108,17 @@ p{
 }
 
 
-
+/*Se define el color de fondo de la seccion de los articulos*/
 .green-area {
     background-color: #0AC693; 
 }
 
-
+/*se define el margen y el borde*/
 .post {
     padding: 1em;
     margin-bottom: -2px;
 }
+/*se define la altura, margen*/
 .post h2 {
     text-transform: uppercase;
     font-weight: 700;
@@ -128,13 +129,13 @@ p{
 .post ul {
     list-style: none;
 }
-
+/* se define el maximo y minimo de espacio de las listas*/
 .post ul li {
     min-height: 300px;
     max-width: 350px;
     margin: 2rem auto;
 }
-
+/*se define el diseño del articulo*/
 .post ul li article {
     overflow: hidden;
     border-radius: 10px;
@@ -142,13 +143,13 @@ p{
     text-align: left;
     padding-bottom: 2em;
 }
-
+/*Se define la imagen del articulo*/
 .post article img{
     height: 150px;
     width: 100%;
     object-fit: cover;
 }
-
+/*Se define el color, la letra, y el margen*/
 .post article h3 {
     color: #0D5061;
     margin-top: 2em;
@@ -158,7 +159,7 @@ p{
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
+/*Se define el tamaño fuente, color */
 .post article p {
     color:#112935;
     font-size: 0.75em;
@@ -167,7 +168,7 @@ p{
 }
 
 /* About */
-/* parte donde esta el contacto de nombre etc*/
+/* Se define el container*/
 .container{
     margin-top: 2em;
     padding-bottom: 4em;
@@ -187,7 +188,7 @@ p{
     font-size: 1.125em;
     margin: 2em;
 }
-
+/*Se define la imafen con su altura y margen*/
 .bio-info img{
    width: 200px;
    margin: auto;
@@ -347,7 +348,10 @@ footer .social-links {
 } 
 
 @media only screen and (min-width: 1024px) {
-
+    .about{
+        height: 100%;
+    }
+    
        /*TODO: FALTA CSS */
 
 
@@ -363,4 +367,5 @@ footer .social-links {
         max-width: 1440px;
         overflow: hidden;
     }
+
 }
