--- a/css/main.css
+++ b/css/main.css
@@ -45,14 +45,14 @@ p{
     padding: 1rem;
     line-height: 25px;
 }
-/*Se define el logo junto con su escala y su margen*/
+
 .logo {
     content: url("../images/isotipo.svg");
     transform: scale(.5);
     width: 90px;
     margin: 1em;
 }
-/*Se define la caja de las opciones, junto con sus posiciones*/
+
 .options {
     color: inherit;
     text-decoration: none;
@@ -74,14 +74,14 @@ p{
 .big-hero img {
     width: 150px;
 }
-/*Se pone los margenes, espacios y el tamaño de la fuente*/
+
 .big-hero h2 {
     font-size: 1.875em;
     font-weight: 700;
     letter-spacing: 0.002em;
     margin-top: 1em ;
 }
-/*Se define el color */
+
 .big-hero p {
     font-size: 0.9em;;
     color: #D7DEE6;
@@ -98,7 +98,7 @@ p{
     justify-content: center;
 
 }
-/*Se define el color, el margen y se quita la decoracion de el texto*/
+
 .social-links li a{
     color: white;
     text-decoration: none;
@@ -108,17 +108,16 @@ p{
 }
 
 
-/*Se define el color de fondo de la seccion de los articulos*/
+
 .green-area {
     background-color: #0AC693; 
 }
 
-/*se define el margen y el borde*/
+
 .post {
     padding: 1em;
     margin-bottom: -2px;
 }
-/*se define la altura, margen*/
 .post h2 {
     text-transform: uppercase;
     font-weight: 700;
@@ -128,14 +127,15 @@ p{
 
 .post ul {
     list-style: none;
+    
 }
-/* se define el maximo y minimo de espacio de las listas*/
+
 .post ul li {
     min-height: 300px;
     max-width: 350px;
     margin: 2rem auto;
 }
-/*se define el diseño del articulo*/
+
 .post ul li article {
     overflow: hidden;
     border-radius: 10px;
@@ -143,13 +143,13 @@ p{
     text-align: left;
     padding-bottom: 2em;
 }
-/*Se define la imagen del articulo*/
+
 .post article img{
     height: 150px;
     width: 100%;
     object-fit: cover;
 }
-/*Se define el color, la letra, y el margen*/
+
 .post article h3 {
     color: #0D5061;
     margin-top: 2em;
@@ -159,7 +159,7 @@ p{
     overflow: hidden;
     text-overflow: ellipsis;
 }
-/*Se define el tamaño fuente, color */
+
 .post article p {
     color:#112935;
     font-size: 0.75em;
@@ -168,18 +168,16 @@ p{
 }
 
 /* About */
-/* Se define el container*/
+/* parte donde esta el contacto de nombre etc*/
 .container{
     margin-top: 2em;
     padding-bottom: 4em;
 }
 .container h2{
-    display: block;
+    
 }
 .bio-info{
-    display: inline-flex;
-    flex-direction: column;
-    width: 45%;
+    margin: auto;
 }
 
 .about h2 {
@@ -188,7 +186,7 @@ p{
     font-size: 1.125em;
     margin: 2em;
 }
-/*Se define la imafen con su altura y margen*/
+
 .bio-info img{
    width: 200px;
    margin: auto;
@@ -203,13 +201,12 @@ p{
     letter-spacing: 2px;
     width: 100%;
     box-sizing: border-box;
-    /* */
+    
 }
 
 .contact {
-    display: inline-block;
-    width: 45%;
     padding: 0px 1em;
+    margin: auto;
     box-sizing: border-box;
     vertical-align: top;
 }
@@ -219,8 +216,7 @@ p{
 }
 
 .contact-form {
-    display: flex;
-    flex-direction: column;
+
 }
 
 .contact-form input, .contact-form textarea{
@@ -317,7 +313,6 @@ footer .social-links {
         flex: 1 0 300px;
     }
 
-
     .logo {
         width: 150px;
         margin: 1.5em;
@@ -343,8 +338,20 @@ footer .social-links {
 
 
 
-
     /*TODO: FALTA CSS */
+    .container h2{
+        display: block;
+        width: 100%;
+    }
+    
+    .bio-info{
+        display: block;
+        width: 80%;
+    }
+    .contact{
+        display: block;
+        width: 80%;
+    }
 } 
 
 @media only screen and (min-width: 1024px) {
@@ -353,8 +360,21 @@ footer .social-links {
     }
     
        /*TODO: FALTA CSS */
+    
 
-
+    .container h2{
+        display: block;
+        width: 100%;
+    }
+    
+    .bio-info{
+        display: inline-block;
+        width: 45%;
+    }
+    .contact{
+        display: inline-block;
+        width: 45%;
+    }
 
 }
 
@@ -366,6 +386,74 @@ footer .social-links {
         margin: 0 auto;
         max-width: 1440px;
         overflow: hidden;
+        display: flex;
+        
     }
 
+    .container h2{
+        display: block;
+        width: 100%;
+    }
+    
+    .bio-info{
+        display: inline-block;
+        width: 45%;
+    }
+    .contact{
+        display: inline-block;
+        width: 45%;
+    }
+    
+
+
 }
+/*
+
+.bio-info{
+    display: inline-flex;
+    flex-direction: column;
+    width: 45%;
+}
+
+.about h2 {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 1.125em;
+    margin: 2em;
+}
+
+.bio-info img{
+   width: 200px;
+   margin: auto;
+
+}
+
+.bio-info p{
+    font-size: 16px;
+    padding: 20px;
+    text-align: left;
+    line-height: 25px;
+    letter-spacing: 2px;
+    width: 100%;
+    box-sizing: border-box;
+    
+}
+
+.contact {
+    display: inline-block;
+    width: 45%;
+    padding: 0px 1em;
+    margin: auto;
+    box-sizing: border-box;
+    vertical-align: top;
+}
+
+.contact * + * {
+    margin-top: 1.5em;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+}
+*/
