--- a/css/main.css
+++ b/css/main.css
@@ -45,14 +45,14 @@ p{
     padding: 1rem;
     line-height: 25px;
 }
-
+/*Se define el logo junto con su escala y su margen*/
 .logo {
     content: url("../images/isotipo.svg");
     transform: scale(.5);
     width: 90px;
     margin: 1em;
 }
-
+/*Se define la caja de las opciones, junto con sus posiciones*/
 .options {
     color: inherit;
     text-decoration: none;
@@ -74,14 +74,14 @@ p{
 .big-hero img {
     width: 150px;
 }
-
+/*Se pone los margenes, espacios y el tamaño de la fuente*/
 .big-hero h2 {
     font-size: 1.875em;
     font-weight: 700;
     letter-spacing: 0.002em;
     margin-top: 1em ;
 }
-
+/*Se define el color */
 .big-hero p {
     font-size: 0.9em;;
     color: #D7DEE6;
@@ -98,7 +98,7 @@ p{
     justify-content: center;
 
 }
-
+/*Se define el color, el margen y se quita la decoracion de el texto*/
 .social-links li a{
     color: white;
     text-decoration: none;
@@ -108,34 +108,35 @@ p{
 }
 
 
-
+/*Se define el color de fondo de la seccion de los articulos*/
 .green-area {
     background-color: #0AC693; 
 }
 
-
+/*se define el margen y el borde*/
 .post {
     padding: 1em;
     margin-bottom: -2px;
 }
+/*se define la altura, margen*/
 .post h2 {
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.125em;
     margin: 1em;
 }
-
+/* elimina marcadores y biñetas*/
 .post ul {
     list-style: none;
     
 }
-
+/* se define el maximo y minimo de espacio de las listas*/
 .post ul li {
     min-height: 300px;
     max-width: 350px;
     margin: 2rem auto;
 }
-
+/*se define el diseño del articulo*/
 .post ul li article {
     overflow: hidden;
     border-radius: 10px;
@@ -143,13 +144,13 @@ p{
     text-align: left;
     padding-bottom: 2em;
 }
-
+/*Se define la imagen del articulo*/
 .post article img{
     height: 150px;
     width: 100%;
     object-fit: cover;
 }
-
+/*Se define el color, la letra, y el margen*/
 .post article h3 {
     color: #0D5061;
     margin-top: 2em;
@@ -159,7 +160,7 @@ p{
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
+/*Se define el tamaño fuente, color */
 .post article p {
     color:#112935;
     font-size: 0.75em;
@@ -179,20 +180,20 @@ p{
 .bio-info{
     margin: auto;
 }
-
+/*se definen tamaños y magenes*/
 .about h2 {
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.125em;
     margin: 2em;
 }
-
+/*Se define la imafen con su altura y margen*/
 .bio-info img{
    width: 200px;
    margin: auto;
 
 }
-
+/*Se definen la manera del texto, tamaño de letra y de la caja*/
 .bio-info p{
     font-size: 16px;
     padding: 20px;
@@ -203,14 +204,14 @@ p{
     box-sizing: border-box;
     
 }
-
+/*Se definen margenes */
 .contact {
     padding: 0px 1em;
     margin: auto;
     box-sizing: border-box;
     vertical-align: top;
 }
-
+/*Se definen maximo de margen*/
 .contact * + * {
     margin-top: 1.5em;
 }
@@ -218,7 +219,7 @@ p{
 .contact-form {
 
 }
-
+/* se definen mas margenes y bordes ademas de su ajuste en pantalla*/
 .contact-form input, .contact-form textarea{
     padding: 1rem 2rem;
     border: none;
@@ -228,6 +229,7 @@ p{
     cursor: pointer;
     margin: 0.5em;
 }
+/*Se definen las dimensiones del label*/
 .contact-form label{
     font-size: 1.3em;
     float: left;
@@ -257,16 +259,16 @@ p{
 .black-decoration{
     background-image: url("../images/decoracion_oscura_small.svg");
 }
-
+/*Se define el fondo del footer y su letra*/
 footer{
     background-color: #0D5061;
     color:#D7DEE6;
 }
-
+/*Se define un margen*/
 footer .social-links {
     margin: 0;
 }
-
+/*Se definen posiciones y colores*/
 .menu {
     background-color:#112935;
     position: absolute;
@@ -276,29 +278,32 @@ footer .social-links {
     width: 100vw;
     height: calc(100vh - 60px);
 }
-
+/*Se definen un borde, se define la poscion del texto y se elimina marcadores y biñetas*/
 .menu {
     list-style: none;
     text-align: left;
     padding: 1em;
 }
+/*Se coloca en una caja y se ponen margenes*/
 .menu li {
     display: block;
     padding: 0.5em;
     margin-top: 5px;
 }
-
+/*Se coloca color y se quita la decoracion del texto*/
 .menu li a {
     color: white;
     text-decoration: none;
 }
+/*Se define un color*/
 .menu li a:hover{
     color: #F74442;
 }
 
 /* Pesonalizando estilo para tablets*/
 @media only screen and (min-width: 768px) {
-  
+  /*Se definen tamaños maximos y minimos de su desplazamiento
+    ademas de margenes y tamaños*/
     .post ul {
         list-style: none;
         display: flex;
@@ -355,6 +360,7 @@ footer .social-links {
 } 
 
 @media only screen and (min-width: 1024px) {
+    /*Se define el contenedor y se colocan las posiciones ademas de su espacio*/
     .about{
         height: 100%;
     }
@@ -381,6 +387,7 @@ footer .social-links {
 @media only screen and (min-width: 1440px) {
 
     /*TODO: FALTA CSS */
+    /*Se define el contenedor y se colocan las posiciones ademas de su espacio*/
     .container {
         width: 80%;
         margin: 0 auto;
